--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,10 @@
               "apps/nx-flash-cards/src/favicon.ico",
               "apps/nx-flash-cards/src/assets"
             ],
-            "styles": ["apps/nx-flash-cards/src/styles.scss"],
+            "styles": ["apps/nx-flash-cards/src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "primeng/resources/themes/saga-green/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"],
             "scripts": []
           },
           "configurations": {
