--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,12 @@
               "apps/nx-flash-cards/src/favicon.ico",
               "apps/nx-flash-cards/src/assets"
             ],
-            "styles": ["apps/nx-flash-cards/src/styles.scss",
-              "node_modules/primeicons/primeicons.css",
-              "primeng/resources/themes/saga-green/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"],
+            "styles": [
+              "apps/nx-flash-cards/src/styles.scss",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
+            ],
             "scripts": []
           },
           "configurations": {
