--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "css"
         }
       },
       "root": "apps/nx-flash-cards",
@@ -26,10 +26,10 @@
               "apps/nx-flash-cards/src/assets"
             ],
             "styles": [
-              "apps/nx-flash-cards/src/styles.scss",
-              "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css"
+              "apps/nx-flash-cards/src/styles.css",
+              "./node_modules/primeng/resources/themes/vela-blue/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
