--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.0",
+    "@angular/animations": "^10.1.2",
+    "@angular/cdk": "^10.2.1",
     "@angular/common": "^10.0.0",
     "@angular/compiler": "^10.0.0",
     "@angular/core": "^10.0.0",
     "@angular/forms": "^10.0.0",
+    "@angular/material": "^10.2.1",
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
@@ -42,11 +44,13 @@
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.0",
+    "@ngrx/store": "^10.0.0",
     "@nrwl/angular": "10.2.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
+    "quill": "^1.3.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "swagger-ui-express": "^4.1.4",
